test/inputs/positive/bench_unrealizable_count_lt4bf069.sl
(set-logic LIA)
(synth-fun f1 ((x Int)) Int ((Ix Int) (Ic Int))
 ((Ix Int (Ic x (- Ix) (+ Ix Ix))) (Ic Int ((Constant Int)))))
(declare-var i Int)
(declare-var i0 Int)
(declare-var i3 Int)
(declare-var i4 Int)
(constraint (or (not (and (and (>= i3 0) (>= i4 0)) (not (< i0 2)))) (= (+ i3 i4) (f1 i))))
(check-synth)
