test/inputs/errors/ex2.sl
(set-logic LIA)
(define-fun max ((x Int) (y Int)) Int (ite (>= x y) x y))
(check-sat)
